--- a/res/layout/dialog_mainmenu.xml
+++ b/res/layout/dialog_mainmenu.xml
@@ -57,7 +57,7 @@
         android:id="@+id/isDiv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="false"
+        android:clickable="true"
         android:text="@string/Div" />
     <EditText
         android:id="@+id/limitDiv"
