--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -11,7 +11,10 @@
         android:id="@+id/score_clear"
         android:title="@string/score_clear"
         app:showAsAction="never"/>
-    
+    <item
+        android:id="@+id/score_export"
+        android:title="@string/score_export"
+        app:showAsAction="never"/>
     <item
         android:id="@+id/action_exit"
         android:title="@string/action_exit"
